modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
.portlet-analytics-settings {
	.contacts-link-disabled {
		cursor: not-allowed;
		opacity: 0.5;
	}

	.empty-state-icon {
		background-image: url(@theme_image_path@/states/empty_state.gif);
		margin: auto;
		max-width: 250px;
		padding-top: 250px;
	}

	#channelManagementToolbar .management-bar {
		.container-fluid,
		.navbar-form {
			padding: 0;
		}
	}

	.radio-buttons {
		label {
			cursor: pointer;
		}

		small {
			margin: 0 0 0 1.4rem;
		}

		.radio {
			margin-bottom: 0;
		}
	}
}

// New CSS - Commerce Connections

.c-empty-state-animation {
	max-width: none;
}

.empty-state-border {
	border: 1px solid #e7e7ed;
	margin: 20px 0;
}

.list-group-item {
	cursor: pointer;
}

.list-group-item-disabled {
	.lexicon-icon,
	.list-group-title,
	.list-group-text {
		color: #9e9ea6 !important;
	}
}

.loading-absolute {
	bottom: 0;
	left: 0;
	margin: auto !important;
	position: absolute;
	right: 0;
	top: 0;
}

